# documesh

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  run-local.sh
deployment/terraform/: README.md  api_services.tf  artifact_registry.tf  build_triggers.tf  cloudbuild_storage.tf  cloudbuild_triggers.tf  cloudrun.tf  documentai.tf  firestore.tf  functions.tf  iam.tf  init.sh  main.tf  outputs.tf  post-init.sh  pubsub.tf  storage.tf  terraform.tfvars.example  variables.tf  vertexai.tf
src/: __init__.py  main.py  pyproject.toml  requirements.txt  sample.ipynb
src/agent/: __init__.py  document_agent.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  agent.py  documents.py  search.py
src/document-management-ui/: __init__.py  config.py  evaluate.py  firestore_db.py  help_desk.py  load_db.py  main.py  streamlit.py
src/functions/: main.py  requirements.txt  shared_utils.py
src/functions/pdf_ingestion/: main.py  requirements.txt
src/functions/search/: main.py  requirements.txt
src/ingestion/: __init__.py  embedding.py  processor.py  vision.py
src/search/: __init__.py  ranking.py  similarity.py
tests/: README.md  test_agent.py  test_processor.py  test_similarity.py
