[project]
name = "documesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.110",
    "functions-framework~=3.5",
    "google-adk~=1.3",
    "google-cloud-aiplatform~=1.39",
    "google-cloud-discoveryengine~=0.11",
    "google-cloud-documentai~=2.25",
    "google-cloud-firestore~=2.13",
    "google-cloud-pubsub~=2.18",
    "google-cloud-storage~=2.13",
    "google-cloud-vision~=3.4",
    "google-generativeai~=0.3",
    "httpx~=0.25",
    "pillow~=11.2.1",
    "pydantic~=2.6",
    "pytest~=7.4",
    "pytest-asyncio~=0.21",
    "python-dotenv~=1.0",
    "python-multipart~=0.0",
    "uvicorn~=0.24",
]
